# tsoha-museums

./: .gitignore  README.md  app.py  config.py  pyproject.toml  pyvenv.cfg  requirements.txt  schema.sql  util.py
Scripts/: activate  activate.bat
repositories/: location_repository.py  museum_repository.py  review_repository.py  user_repository.py
static/: styles.css
templates/: add_museum.html  index.html  layout.html  login.html  museum.html  museums.html  register.html  reviews.html  search.html
