[tool.poetry]
name = "museoappi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.9.0"
click = "8.1.7"
colorama = "0.4.6"
flask = "3.1.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.1.1"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "3.0.2"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.36"
typing-extensions = "4.12.2"
werkzeug = "3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
